@@ -13,7 +13,6 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
@@ -44,7 +43,7 @@ public class EventoService implements IEventoService {
             return "La bonificación tiene que ser mayor que 1";
         } else {
             Evento evento = modelMapper.map(eventoDTO, Evento.class);
-            evento.setMunicipalidad(municipalidadRepository.findById(eventoDTO.getMunicipalidadId()).orElse(null));
+            evento.setMunicipalidad(municipalidadRepository.findById(eventoDTO.getMunicipalidadId()).get());
             evento.setPesoActual(BigDecimal.ZERO);
             evento.setSituacion(false);
             eventoRepository.save(evento);
@@ -57,8 +56,10 @@ public class EventoService implements IEventoService {
         if (!eventoRepository.existsById(eventoDTO.getIdEvento())) {
             return "El evento no existe";
         }
-
-        Evento evento = eventoRepository.findById(eventoDTO.getIdEvento()).orElse(null);
+        Evento evento = eventoRepository.findById(eventoDTO.getIdEvento()).get();
+        if (eventoRepository.existsByNombre(eventoDTO.getNombre()) && !eventoDTO.getNombre().equals(evento.getNombre())) {
+            return "Este nombre ya ha sido registrado";
+        }
         evento.setNombre((eventoDTO.getNombre() != null && !eventoDTO.getNombre().isBlank())
                 ? eventoDTO.getNombre() : evento.getNombre());
         evento.setDescripcion((eventoDTO.getDescripcion() != null && !eventoDTO.getDescripcion().isBlank())
@@ -66,30 +67,25 @@ public class EventoService implements IEventoService {
         evento.setBonificacion((eventoDTO.getBonificacion() != null && eventoDTO.getBonificacion() > 1)
                 ? eventoDTO.getBonificacion() : evento.getBonificacion());
 
-        if (eventoRepository.existsByNombre(eventoDTO.getNombre()) && !Objects.equals(evento.getNombre(), eventoDTO.getNombre())) {
-            return "Este evento ya existe";
-        }
-
         eventoRepository.save(evento);
         return "Evento modificado exitosamente";
     }
 
     @Override
-    public String eliminar(Integer idEvento) {
-        if (idEvento == null) {
+    public String eliminar(Integer id) {
+        if (id == null) {
             return "Seleccione un evento";
-        } else if (!eventoRepository.existsById(idEvento)) {
+        } else if (!eventoRepository.existsById(id)) {
             return "El evento no existe";
         } else {
-            eventoRepository.deleteById(idEvento);
+            eventoRepository.deleteById(id);
             return "Evento eliminado correctamente";
         }
     }
 
     @Override
-    public EventoDTO buscarPorId(Integer idEvento) {
-        Evento evento = eventoRepository.findById(idEvento).orElse(null);
-
+    public EventoDTO buscarPorId(Integer id) {
+        Evento evento = eventoRepository.findById(id).orElse(null);
         if (evento == null) {
             return null;
         } else {
@@ -103,11 +99,9 @@ public class EventoService implements IEventoService {
         for (Evento evento : eventos) {
             if ((evento.getFechaInicio().isBefore(LocalDate.now()) || evento.getFechaInicio().isEqual(LocalDate.now()))
                     && (evento.getFechaFin().isAfter(LocalDate.now()) || evento.getFechaFin().isEqual(LocalDate.now()))) {
-                BigDecimal peso = reciclajeRepository.calcularPesoPorEvento(evento.getIdEvento());
+                BigDecimal peso = reciclajeRepository.calcularPesoPorEvento(evento.getId());
                 evento.setPesoActual(peso);
-
                 evento.setSituacion(peso.compareTo(evento.getPesoObjetivo()) >= 0);
-
                 eventoRepository.save(evento);
             }
         }
@@ -118,9 +112,7 @@ public class EventoService implements IEventoService {
         if (fechaInicio.isAfter(fechaFin)){
             return null;
         }
-
         LocalDate hoy = LocalDate.now();
-
         List<Evento> lista = eventoRepository.findAll().stream()
                 .filter(evento -> nombre==null || evento.getNombre().toLowerCase().contains(nombre.toLowerCase()))
                 .filter(evento -> distrito==null || evento.getMunicipalidad().getDistrito().equals(distrito))
@@ -138,16 +130,18 @@ public class EventoService implements IEventoService {
                 })
                 .filter(evento -> fechaInicio==null || evento.getFechaInicio().isBefore(fechaFin) || evento.getFechaInicio().isEqual(fechaFin))
                 .filter(evento -> fechaFin==null || evento.getFechaFin().isAfter(fechaInicio) || evento.getFechaFin().isEqual(fechaInicio))
-                .collect(Collectors.toList());
+                .toList();
 
         return lista.stream().map(evento -> modelMapper.map(evento, EventoDTO.class)).collect(Collectors.toList());
     }
 
     @Override
     public List<EventoDTO> listarEventosPorVecino(Integer idVecino) {
-        List<EventoXVecino> listaEXV = eventoXVecinoRepository.findAllByVecino(vecinoRepository.findById(idVecino).orElse(null)).stream().toList();
+        if (!vecinoRepository.existsById(idVecino)) {
+            throw new RuntimeException("Este vecino no existe");
+        }
+        List<EventoXVecino> listaEXV = eventoXVecinoRepository.findAllByVecino_Id(idVecino).stream().toList();
         List<Evento> eventos = new ArrayList<>();
-
         for(EventoXVecino exv: listaEXV) {
             eventos.add(exv.getEvento());
         }
